k8s/app-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-canary-service
spec:
  selector:
    app: crdt-app
    version: canary
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
