k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: crdt-app
    version: stable
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
